manifest/Nft.Vr.Service.Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nft-vr-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: '1g'
spec:
  rules:
    - http:
        paths:
          - path: /nft-vr/service
            pathType: Prefix
            backend:
              service:
                name: nft-vr-service
                port:
                  number: 3002
